--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "futura_stdlight";
   src: url("font/futurastd-light-webfont-webfont.woff2") format("woff2"),
@@ -35,11 +34,9 @@ body {
   color: var(--dark-gray);
   max-width: var(--max-width);
   @media (min-width: 640px) {
-    .content {
-      display: flex;
-    }
+    margin: 0 auto;
+    margin-top: 24px;
   }
-  
 }
 
 h2,
@@ -71,19 +68,20 @@ li > h4 {
 header {
   height: 120px;
   background: var(--basil-green);
+  position: relative;
   border-radius: 8px 8px 0px 0px;
   position: relative;
+
   h1 {
     background: url(img/basil.png) no-repeat;
     font-family: futura_stdlight, sans-serif;
     font-weight: normal;
     color: #fff;
     font-size: 5rem;
-    @media (width > 640){
     padding-left: 260px;
     padding-top: 90px;
-    transform: translate(-100px, -80px);
-    }
+    transform: translate(-100px, -80px)
+    
   }
   a.beta {
     background: url("img/burst.svg") no-repeat;
@@ -105,6 +103,13 @@ header {
     }
   }
 }
+
+  
+  
+  
+
+
+
 nav {
   background: var(--light-gray);
   border-top: 0.5rem solid var(--light-orange);
@@ -113,16 +118,17 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-}
 
-nav ul {
-  display: flex;
-  gap: 1rem;
-}
+  ul {
+    display: flex;
+    gap: 1rem;
+  }
 
-nav li {
-  list-style: none;
-  /* margin-right: 0.5rem; */
+  li {
+    list-style: none;
+    /* margin-right: 0.5rem; */
+  }
+
   a {
     text-align: center;
     font-size: 1.5rem;
@@ -133,7 +139,7 @@ nav li {
     min-width: 120px;
     display: inline-block;
     &:hover {
-      color: #fff
+      color: #fff;
     }
   }
 }
@@ -161,9 +167,7 @@ nav li {
 .nav-cookit a:hover {
   background-image: linear-gradient(to bottom, #344e8b 1%, #6f89c7 100%);
 }
-nav p {
-  margin-right: auto;
-}
+
 article,
 aside {
   padding: 1rem;
@@ -179,6 +183,11 @@ article ol {
   margin-bottom: 0.5rem;
 }
 
+article h2 {
+  font-size: 2rem;
+  text-transform: capitalize;
+}
+
 img {
   width: 100%;
 }
@@ -190,15 +199,96 @@ footer {
   margin-bottom: 2rem;
 }
 
-@media (width > 640px) {
+.modal-outer {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  /* Hide this until we need it */
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+}
+
+.modal-outer.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-outer.open .modal {
+  transform: translateY(0);
+}
+
+.modal {
+  box-sizing: border-box;
+  max-width: 400px;
+  padding: 2rem;
+  border-radius: 5px;
+  min-height: 200px;
+  border: 2px solid var(--orange);
+  background: white;
+  transform: translateY(200%);
+  transition: transform 1s ease;
+  /* position: fixed;
+  top: calc(50vh - 100px);
+  left: calc(50vw - 200px);
+  display: none; */
+}
+
+.closer {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #fff;
+  color: var(--orange);
+  border: 4px solid var(--orange);
+  border-radius: 50%;
+  text-align: center;
+  line-height: 1.5rem;
+  cursor: pointer;
+}
+
+/* .open {
+  display: block;
+} */
+
+@media (width > 600px) {
+  body {
+    display: grid;
+    grid-template-areas:
+      "header"
+      "nav"
+      "content"
+      "footer";
+  }
+  header {
+    grid-area: header;
+  }
+  nav {
+    grid-area: nav;
+  }
   .content {
-    display: flex;
+    grid-area: content;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 1rem;
   }
   article {
-    flex: 1 0 60%;
+    grid-column: span 3;
   }
   aside {
+    grid-column: span 2;
     background: var(--light-green);
     box-shadow: -4px 0px 4px #ddd;
+  }
+  footer {
+    grid-area: footer;
   }
 }
